2016-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c: Support SOURCE_DATE_EPOCH for %%CreationDate.

2016-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c: Fix one-byte buffer overflow bug reported by Hanno Boeck:
	http://tug.org/pipermail/tex-live/2016-January/037686.html.

2016-02-01  Karl Berry  <karl@tug.org>

	* dvips.1,
	* afm2tfm.1: ask for bug reports to go to tex-k.

2016-01-21  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Afm2tfm options) <-a>: document new option.
	* afm2tfm.c (openfiles): new option -a.
	(USAGE): include it in list for --help.
	(noaccentheightadjust): new global to remember it.
	(texheight): do nothing if -a is specified,
	or if the heuristically-guessed height is less than the original.
	Bug report from Michael Sharpe.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* test-dvips (removed): Renamed ...
	* test-dvips.test (new): ... into this.
	* Makefile.am: Better dependencies for 'make check'.

2015-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-05-21  Karl Berry  <karl@tug.org>

	* version 5.995 for TL'15.

2015-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Adapted.

2015-04-17  Karl Berry  <karl@tug.org>

	* contrib/PSTricks: remove this ancient copy of a PSTricks README.
	* special.lpro (/psfts, /startTexFig, /doclip, /endTexFig):
	remove these defns from (obsolete and nonfree) psfig.
	* testdata/special.pro: regenerate.
	* dvips.texi (Why Dvips): remove paragraph about psfig and
	other features that are no longer especially interesting.
	Report from Werner Fink, 14 Apr 2015 17:16:23.

2015-03-15  Karl Berry  <karl@tug.org>

	* configure.ac,
	* NEWS
	* dvips.c,
	* dvips.h,
	* afm2tfm.c,
	* dvips.texi: version 5.995 for TL'15.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
